packages/compiler/tests/fixtures/invalid/complex-state-init.svelte
<script>
  let x = someFunction();
</script>
<text>{x}</text>
